--- a/templates/index.html
+++ b/templates/index.html
@@ -9,20 +9,9 @@
 
 An algorithm engineer CAN do frontend, but VERY VERY UGLY.
 
-<!-- <script src="https://cdn.jsdelivr.net/npm/cnchar/cnchar.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/cnchar-poly/cnchar.poly.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/cnchar-order/cnchar.order.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/cnchar-trad/cnchar.trad.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/cnchar-draw/cnchar.draw.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/cnchar-idiom/cnchar.idiom.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/cnchar-xhy/cnchar.xhy.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/cnchar-radical/cnchar.radical.min.js"></script>
-
-<script>
-    cnchar.draw('花好月圆')
-</script>         -->
 
 <script src="https://cdn.jsdelivr.net/npm/hanzi-writer@3.2/dist/hanzi-writer.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/cnchar-all/cnchar.all.min.js"></script>
 
 <p id="target0"></p>
 <p id="target1"></p>
@@ -31,43 +20,48 @@ An algorithm engineer CAN do frontend, but VERY VERY UGLY.
 
 <script>
     function renderFanningStrokes(target, strokes) {
-    var svg = document.createElementNS('http://www.w3.org/2000/svg', 'svg');
-    svg.style.width = '75px';
-    svg.style.height = '75px';
-    svg.style.border = '1px solid #EEE'
-    svg.style.marginRight = '3px'
-    target.appendChild(svg);
-    var group = document.createElementNS('http://www.w3.org/2000/svg', 'g');
+        var svg = document.createElementNS('http://www.w3.org/2000/svg', 'svg');
+        svg.style.width = '75px';
+        svg.style.height = '75px';
+        svg.style.border = '1px solid #EEE'
+        svg.style.marginRight = '3px'
+        target.appendChild(svg);
+        var group = document.createElementNS('http://www.w3.org/2000/svg', 'g');
 
-    // set the transform property on the g element so the character renders at 75x75
-    var transformData = HanziWriter.getScalingTransform(75, 75);
-    group.setAttributeNS(null, 'transform', transformData.transform);
-    svg.appendChild(group);
+        // set the transform property on the g element so the character renders at 75x75
+        var transformData = HanziWriter.getScalingTransform(75, 75);
+        group.setAttributeNS(null, 'transform', transformData.transform);
+        svg.appendChild(group);
 
-    strokes.forEach(function(strokePath) {
-        var path = document.createElementNS('http://www.w3.org/2000/svg', 'path');
-        path.setAttributeNS(null, 'd', strokePath);
-        // style the character paths
-        path.style.fill = '#555';
-        group.appendChild(path);
-    });
+        strokes.forEach(function(strokePath) {
+            var path = document.createElementNS('http://www.w3.org/2000/svg', 'path');
+            path.setAttributeNS(null, 'd', strokePath);
+            // style the character paths
+            path.style.fill = '#555';
+            group.appendChild(path);
+        });
     }
 
-    function renderStrokesByOrder(chars, orders, id) {
+    function renderStrokes(chars, strokes, id) {
         var target = document.getElementById(id);
         function renderChar (i) {
-            var thisOrders = orders[i]
+            var thisStrokes = strokes[i]
+            var thisChar = chars[i]
             var id = 'target' + i
-            var charData = HanziWriter.loadCharacterData(chars[i]).then(function(charData) {
-                console.log(charData)
+            var strokeName = cnchar.stroke(thisChar, 'order')[0];
+            HanziWriter.loadCharacterData(thisChar).then(function(charData) {
+                if(strokeName.length != charData.strokes.length) {
+                    alert("inner data mismatch, stroke name length != char data length")
+                    return
+                }
                 var target = document.getElementById(id);
-                var strokes = []
+                var toRender = []
                 for (var i = 0; i < charData.strokes.length; i++) {
-                    if(thisOrders.includes(i)) {
-                        strokes.push(charData.strokes[i])
+                    if(thisStrokes.includes(strokeName[i])) {
+                        toRender.push(charData.strokes[i])
                     }
                 }
-                renderFanningStrokes(target, strokes);
+                renderFanningStrokes(target, toRender);
             });            
         }
         for (var i = 0; i < chars.length; i++) {
@@ -75,7 +69,7 @@ An algorithm engineer CAN do frontend, but VERY VERY UGLY.
         }
     }
 
-    renderStrokesByOrder("花好月圆", [[0,1,2,3], [0,1,2,3], [2,3], [2,3,4]], 'target')
+    renderStrokes("花好月圆", ['jf', 'jf', 'jf', 'jf'], 'target')
 </script>
 
 {% endblock %}
