--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 <head>
     {% block head %}
         <meta charset="utf-8">
-        <title>{% block title %}Template - HelloFlask{% endblock %}</title>
+        <title>{% block title %}Money 猜成语{% endblock %}</title>
         <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='favicon.ico') }}">
         {% block styles %}
             <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css' ) }}">
