--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,6 @@
 
 
 点击笔画，猜成语！
-
 <p>
     <table>
         <tr id="chars_placeholder"></tr>
@@ -99,9 +98,22 @@
     function generateUrl() {
         var input = document.getElementById("gen_code_input")
     }
+    function evalGuess() {
+        var guess=document.getElementById("guess").value;
+        if (guess === idiom) {
+            window.alert("Bingo!!!! Guess NUM:"+clickedStrokes.length)
+        } else {
+            window.alert("Wrong! please try again!")
+        }
+    }
 
 </script>
+<p>
+GUESS:<input type="text" id="guess" name="txt" minlength="4" maxlength="8" size="16">
+    <input type="button" value="submit" onclick="evalGuess()">
 
+
+</p>
 <p>
     <button onclick='flashChars("k")'> "点 丶" </button> 
     <button onclick='flashChars("d")'> "点（反向） ㇀" </button> 
