--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,7 @@
 <head>
     {% block head %}
         <meta charset="utf-8">
+        <meta name="viewport" id="viewport-meta" content="width=device-width, initial-scale=1.0">
         <title>{% block title %}Money 猜成语{% endblock %}</title>
         <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='favicon.ico') }}">
         {% block styles %}
