--- a/static/style.css
+++ b/static/style.css
@@ -1,7 +1,36 @@
+/* basic page */
+
 body {
     margin: auto;
     max-width: 400;
 }
+
+main {
+    padding: 10px 20px;
+}
+
+footer {
+    font-size: 13px;
+    color: #888;
+    border-top: 1px solid #eee;
+    margin-top: 25px;
+    text-align: center;
+    padding: 10px;
+
+}
+
+.alert {
+    position: relative;
+    padding: 0.75rem 1.25rem;
+    margin-bottom: 1rem;
+    border: 1px solid transparent;
+    border-radius: 0.25rem;
+    color: #004085;
+    background-color: #cce5ff;
+    border-color: #b8daff;
+}
+
+/* nav bar related */
 
 .navbar {
     display: flex;
@@ -46,27 +75,27 @@ body {
     color: #ddd;
 }
 
-main {
-    padding: 10px 20px;
+/* overlay page related */
+
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-footer {
-    font-size: 13px;
-    color: #888;
-    border-top: 1px solid #eee;
-    margin-top: 25px;
-    text-align: center;
-    padding: 10px;
-
+.overlay-content {
+    background-color: white;
+    padding: 20px;
+    border-radius: 10px;
+    max-width: 80%;
 }
 
-.alert {
-  position: relative;
-  padding: 0.75rem 1.25rem;
-  margin-bottom: 1rem;
-  border: 1px solid transparent;
-  border-radius: 0.25rem;
-  color: #004085;
-  background-color: #cce5ff;
-  border-color: #b8daff;
+.hidden {
+    display: none;
 }
