--- a/templates/base.html
+++ b/templates/base.html
@@ -15,9 +15,10 @@
     <script src="https://cdn.jsdelivr.net/npm/hanzi-writer@3.2/dist/hanzi-writer.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/cnchar-all/cnchar.all.min.js"></script>
     <script src="static/generate_url.js"></script>
-    <script src="static/main.js"></script>
     <script src="static/overlay.js"></script>
-
+    <script src="static/layout.js"></script>
+    <script src="static/main.js"></script>
+    
     {% endblock %}
 </head>
 
