--- a/templates/base.html
+++ b/templates/base.html
@@ -36,11 +36,11 @@
         {% block content %}{% endblock %}
     </main>
 
-    <footer>
+    <!-- <footer>
         {% block footer %}
         <small> &copy; 2022 plus2047 </small>
         {% endblock %}
-    </footer>
+    </footer> -->
 
     {% block scripts %}
     <script src="https://cdn.jsdelivr.net/npm/hanzi-writer@3.2/dist/hanzi-writer.min.js"></script>
