--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,10 @@
+@font-face {
+    font-family: 'fangzheng-kaiti';
+    src: url('https://guessidioms.github.io/guessidioms/static/fangzheng-kaiti.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
 /* basic page */
 
 body {
